--- a/nand2tetris/projects/09/Tictactoe/TicTacToe.vm
+++ b/nand2tetris/projects/09/Tictactoe/TicTacToe.vm
@@ -8,6 +8,9 @@ push constant 9
 call Array.new 1
 pop this 1
 push pointer 0
+call AI.new 1
+pop this 4
+push pointer 0
 call TicTacToe.clearScreen 1
 pop temp 0
 label WHILE_EXP0
@@ -153,20 +156,25 @@ push this 2
 push constant 1
 neg
 eq
-push constant 1
-or
 if-goto IF_TRUE0
 goto IF_FALSE0
 label IF_TRUE0
 push constant 0
 pop local 1
 label IF_FALSE0
+push this 2
+push constant 1
+eq
+if-goto IF_TRUE1
+goto IF_FALSE1
+label IF_TRUE1
+push constant 0
+pop local 1
+label IF_FALSE1
 goto WHILE_EXP1
 label WHILE_END1
-push constant 0
-pop this 3
 push this 2
-pop this 4
+pop this 3
 push pointer 0
 call TicTacToe.draw 1
 pop temp 0
@@ -246,6 +254,9 @@ pop pointer 0
 push this 1
 call Array.dispose 1
 pop temp 0
+push this 4
+call AI.dispose 1
+pop temp 0
 push pointer 0
 call Memory.deAlloc 1
 pop temp 0
@@ -313,8 +324,9 @@ function TicTacToe.run 0
 push argument 0
 pop pointer 0
 label WHILE_EXP0
-push pointer 0
-call TicTacToe.finished 1
+push this 4
+push this 1
+call AI.finished 2
 push constant 2
 eq
 not
@@ -322,10 +334,6 @@ if-goto WHILE_END0
 push pointer 0
 call TicTacToe.changeState 1
 pop temp 0
-push this 3
-push constant 1
-add
-pop this 3
 push this 2
 push constant 1
 neg
@@ -362,8 +370,9 @@ call Output.printString 1
 pop temp 0
 call Output.println 0
 pop temp 0
-push pointer 0
-call TicTacToe.finished 1
+push this 4
+push this 1
+call AI.finished 2
 push constant 0
 eq
 if-goto IF_TRUE0
@@ -552,7 +561,7 @@ call Output.printString 1
 pop temp 0
 call Output.println 0
 pop temp 0
-push constant 24
+push constant 37
 call String.new 1
 push constant 67
 call String.appendChar 2
@@ -601,6 +610,32 @@ call String.appendChar 2
 push constant 33
 call String.appendChar 2
 push constant 33
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 40
+call String.appendChar 2
+push constant 76
+call String.appendChar 2
+push constant 105
+call String.appendChar 2
+push constant 116
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+push constant 114
+call String.appendChar 2
+push constant 97
+call String.appendChar 2
+push constant 108
+call String.appendChar 2
+push constant 108
+call String.appendChar 2
+push constant 121
+call String.appendChar 2
+push constant 33
+call String.appendChar 2
+push constant 41
 call String.appendChar 2
 call Output.printString 1
 pop temp 0
@@ -758,143 +793,6 @@ call Output.printString 1
 pop temp 0
 call Output.println 0
 pop temp 0
-goto IF_END0
-label IF_FALSE0
-push constant 33
-call String.new 1
-push constant 67
-call String.appendChar 2
-push constant 111
-call String.appendChar 2
-push constant 109
-call String.appendChar 2
-push constant 112
-call String.appendChar 2
-push constant 117
-call String.appendChar 2
-push constant 116
-call String.appendChar 2
-push constant 101
-call String.appendChar 2
-push constant 114
-call String.appendChar 2
-push constant 58
-call String.appendChar 2
-push constant 32
-call String.appendChar 2
-push constant 73
-call String.appendChar 2
-push constant 116
-call String.appendChar 2
-push constant 39
-call String.appendChar 2
-push constant 115
-call String.appendChar 2
-push constant 32
-call String.appendChar 2
-push constant 109
-call String.appendChar 2
-push constant 121
-call String.appendChar 2
-push constant 32
-call String.appendChar 2
-push constant 116
-call String.appendChar 2
-push constant 117
-call String.appendChar 2
-push constant 114
-call String.appendChar 2
-push constant 110
-call String.appendChar 2
-push constant 33
-call String.appendChar 2
-push constant 32
-call String.appendChar 2
-push constant 87
-call String.appendChar 2
-push constant 97
-call String.appendChar 2
-push constant 116
-call String.appendChar 2
-push constant 99
-call String.appendChar 2
-push constant 104
-call String.appendChar 2
-push constant 32
-call String.appendChar 2
-push constant 109
-call String.appendChar 2
-push constant 101
-call String.appendChar 2
-push constant 33
-call String.appendChar 2
-call Output.printString 1
-pop temp 0
-call Output.println 0
-pop temp 0
-push constant 1000
-call Sys.wait 1
-pop temp 0
-push constant 25
-call String.new 1
-push constant 67
-call String.appendChar 2
-push constant 111
-call String.appendChar 2
-push constant 109
-call String.appendChar 2
-push constant 112
-call String.appendChar 2
-push constant 117
-call String.appendChar 2
-push constant 116
-call String.appendChar 2
-push constant 101
-call String.appendChar 2
-push constant 114
-call String.appendChar 2
-push constant 58
-call String.appendChar 2
-push constant 32
-call String.appendChar 2
-push constant 76
-call String.appendChar 2
-push constant 101
-call String.appendChar 2
-push constant 116
-call String.appendChar 2
-push constant 32
-call String.appendChar 2
-push constant 109
-call String.appendChar 2
-push constant 101
-call String.appendChar 2
-push constant 32
-call String.appendChar 2
-push constant 116
-call String.appendChar 2
-push constant 104
-call String.appendChar 2
-push constant 105
-call String.appendChar 2
-push constant 110
-call String.appendChar 2
-push constant 107
-call String.appendChar 2
-push constant 46
-call String.appendChar 2
-push constant 46
-call String.appendChar 2
-push constant 46
-call String.appendChar 2
-call Output.printString 1
-pop temp 0
-call Output.println 0
-pop temp 0
-push constant 500
-call Sys.wait 1
-pop temp 0
-label IF_END0
 label WHILE_EXP0
 push local 1
 not
@@ -986,7 +884,142 @@ pop local 1
 label IF_FALSE1
 goto WHILE_EXP0
 label WHILE_END0
+goto IF_END0
+label IF_FALSE0
+push constant 33
+call String.new 1
+push constant 67
+call String.appendChar 2
+push constant 111
+call String.appendChar 2
+push constant 109
+call String.appendChar 2
+push constant 112
+call String.appendChar 2
+push constant 117
+call String.appendChar 2
+push constant 116
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+push constant 114
+call String.appendChar 2
+push constant 58
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 73
+call String.appendChar 2
+push constant 116
+call String.appendChar 2
+push constant 39
+call String.appendChar 2
+push constant 115
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 109
+call String.appendChar 2
+push constant 121
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 116
+call String.appendChar 2
+push constant 117
+call String.appendChar 2
+push constant 114
+call String.appendChar 2
+push constant 110
+call String.appendChar 2
+push constant 33
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 87
+call String.appendChar 2
+push constant 97
+call String.appendChar 2
+push constant 116
+call String.appendChar 2
+push constant 99
+call String.appendChar 2
+push constant 104
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 109
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+push constant 33
+call String.appendChar 2
+call Output.printString 1
+pop temp 0
+call Output.println 0
+pop temp 0
+push constant 25
+call String.new 1
+push constant 67
+call String.appendChar 2
+push constant 111
+call String.appendChar 2
+push constant 109
+call String.appendChar 2
+push constant 112
+call String.appendChar 2
+push constant 117
+call String.appendChar 2
+push constant 116
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+push constant 114
+call String.appendChar 2
+push constant 58
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 76
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+push constant 116
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 109
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 116
+call String.appendChar 2
+push constant 104
+call String.appendChar 2
+push constant 105
+call String.appendChar 2
+push constant 110
+call String.appendChar 2
+push constant 107
+call String.appendChar 2
+push constant 46
+call String.appendChar 2
+push constant 46
+call String.appendChar 2
+push constant 46
+call String.appendChar 2
+call Output.printString 1
+pop temp 0
+call Output.println 0
+pop temp 0
 push this 4
+push this 1
+call AI.alphaBetaSearch 2
+pop local 0
+label IF_END0
+push this 3
 push this 2
 eq
 if-goto IF_TRUE2
@@ -1013,250 +1046,15 @@ pop that 0
 label IF_END2
 push constant 0
 return
-function TicTacToe.finished 0
+function TicTacToe.currentPlayer 0
 push argument 0
 pop pointer 0
-push pointer 0
-call TicTacToe.checkRows 1
-push pointer 0
-call TicTacToe.checkCollums 1
-or
-push pointer 0
-call TicTacToe.checkDiagonals 1
-or
-if-goto IF_TRUE0
-goto IF_FALSE0
-label IF_TRUE0
 push this 2
 return
-label IF_FALSE0
+function TicTacToe.firstPlayer 0
+push argument 0
+pop pointer 0
 push this 3
-push constant 9
-eq
-if-goto IF_TRUE1
-goto IF_FALSE1
-label IF_TRUE1
-push constant 0
-return
-label IF_FALSE1
-push constant 2
-return
-function TicTacToe.checkRows 1
-push argument 0
-pop pointer 0
-push constant 0
-pop local 0
-label WHILE_EXP0
-push local 0
-push constant 3
-lt
-not
-if-goto WHILE_END0
-push constant 3
-push local 0
-call Math.multiply 2
-push this 1
-add
-pop pointer 1
-push that 0
-push constant 3
-push local 0
-call Math.multiply 2
-push constant 1
-add
-push this 1
-add
-pop pointer 1
-push that 0
-eq
-push constant 3
-push local 0
-call Math.multiply 2
-push this 1
-add
-pop pointer 1
-push that 0
-and
-push constant 3
-push local 0
-call Math.multiply 2
-push constant 2
-add
-push this 1
-add
-pop pointer 1
-push that 0
-eq
-push constant 3
-push local 0
-call Math.multiply 2
-push this 1
-add
-pop pointer 1
-push that 0
-push constant 95
-eq
-not
-and
-if-goto IF_TRUE0
-goto IF_FALSE0
-label IF_TRUE0
-push constant 0
-not
-return
-label IF_FALSE0
-push local 0
-push constant 1
-add
-pop local 0
-goto WHILE_EXP0
-label WHILE_END0
-push constant 0
-return
-function TicTacToe.checkCollums 1
-push argument 0
-pop pointer 0
-push constant 0
-pop local 0
-label WHILE_EXP0
-push local 0
-push constant 3
-lt
-not
-if-goto WHILE_END0
-push local 0
-push this 1
-add
-pop pointer 1
-push that 0
-push local 0
-push constant 3
-add
-push this 1
-add
-pop pointer 1
-push that 0
-eq
-push local 0
-push this 1
-add
-pop pointer 1
-push that 0
-and
-push local 0
-push constant 6
-add
-push this 1
-add
-pop pointer 1
-push that 0
-eq
-push local 0
-push this 1
-add
-pop pointer 1
-push that 0
-push constant 95
-eq
-not
-and
-if-goto IF_TRUE0
-goto IF_FALSE0
-label IF_TRUE0
-push constant 0
-not
-return
-label IF_FALSE0
-push local 0
-push constant 1
-add
-pop local 0
-goto WHILE_EXP0
-label WHILE_END0
-push constant 0
-return
-function TicTacToe.checkDiagonals 0
-push argument 0
-pop pointer 0
-push constant 0
-push this 1
-add
-pop pointer 1
-push that 0
-push constant 4
-push this 1
-add
-pop pointer 1
-push that 0
-eq
-push constant 0
-push this 1
-add
-pop pointer 1
-push that 0
-and
-push constant 8
-push this 1
-add
-pop pointer 1
-push that 0
-eq
-push constant 0
-push this 1
-add
-pop pointer 1
-push that 0
-push constant 95
-eq
-not
-and
-if-goto IF_TRUE0
-goto IF_FALSE0
-label IF_TRUE0
-push constant 0
-not
-return
-label IF_FALSE0
-push constant 2
-push this 1
-add
-pop pointer 1
-push that 0
-push constant 4
-push this 1
-add
-pop pointer 1
-push that 0
-eq
-push constant 2
-push this 1
-add
-pop pointer 1
-push that 0
-and
-push constant 6
-push this 1
-add
-pop pointer 1
-push that 0
-eq
-push constant 2
-push this 1
-add
-pop pointer 1
-push that 0
-push constant 95
-eq
-not
-and
-if-goto IF_TRUE1
-goto IF_FALSE1
-label IF_TRUE1
-push constant 0
-not
-return
-label IF_FALSE1
-push constant 0
 return
 function TicTacToe.clearScreen 0
 push argument 0
