--- a/nand2tetris/projects/09/Tictactoe/AI.vm
+++ b/nand2tetris/projects/09/Tictactoe/AI.vm
@@ -17,6 +17,39 @@ return
 function AI.alphaBetaSearch 6
 push argument 0
 pop pointer 0
+push this 0
+call TicTacToe.numOfMoves 1
+push constant 0
+eq
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
+push constant 2
+return
+label IF_FALSE0
+push this 0
+call TicTacToe.numOfMoves 1
+push constant 1
+eq
+if-goto IF_TRUE1
+goto IF_FALSE1
+label IF_TRUE1
+push constant 4
+push argument 1
+add
+pop pointer 1
+push that 0
+push constant 95
+eq
+if-goto IF_TRUE2
+goto IF_FALSE2
+label IF_TRUE2
+push constant 4
+return
+label IF_FALSE2
+push constant 2
+return
+label IF_FALSE1
 push constant 10
 neg
 pop local 2
@@ -40,9 +73,9 @@ pop pointer 1
 push that 0
 push constant 95
 eq
-if-goto IF_TRUE0
-goto IF_FALSE0
-label IF_TRUE0
+if-goto IF_TRUE3
+goto IF_FALSE3
+label IF_TRUE3
 push pointer 0
 push argument 1
 push local 1
@@ -54,40 +87,33 @@ push pointer 0
 push local 5
 push local 2
 push local 3
-call AI.minValue 4
-pop local 0
-push local 0
-call Output.printInt 1
-pop temp 0
+push this 0
+call TicTacToe.numOfMoves 1
 push constant 1
-call String.new 1
-push constant 32
-call String.appendChar 2
-call Output.printString 1
-pop temp 0
+add
+call AI.minValue 5
+pop local 0
 push local 5
 call Array.dispose 1
 pop temp 0
 push local 0
 push local 2
 gt
-if-goto IF_TRUE1
-goto IF_FALSE1
-label IF_TRUE1
+if-goto IF_TRUE4
+goto IF_FALSE4
+label IF_TRUE4
 push local 0
 pop local 2
 push local 1
 pop local 4
-label IF_FALSE1
-label IF_FALSE0
+label IF_FALSE4
+label IF_FALSE3
 push local 1
 push constant 1
 add
 pop local 1
 goto WHILE_EXP0
 label WHILE_END0
-call Keyboard.readChar 0
-pop temp 0
 push local 4
 return
 function AI.maxValue 4
@@ -95,7 +121,8 @@ push argument 0
 pop pointer 0
 push pointer 0
 push argument 1
-call AI.finished 2
+push argument 4
+call AI.finished 3
 push constant 1
 neg
 call Math.multiply 2
@@ -143,7 +170,10 @@ push pointer 0
 push local 3
 push argument 2
 push argument 3
-call AI.minValue 4
+push argument 4
+push constant 1
+add
+call AI.minValue 5
 call Math.max 2
 pop local 0
 push local 3
@@ -185,7 +215,8 @@ push argument 0
 pop pointer 0
 push pointer 0
 push argument 1
-call AI.finished 2
+push argument 4
+call AI.finished 3
 push constant 1
 neg
 call Math.multiply 2
@@ -231,7 +262,10 @@ push pointer 0
 push local 3
 push argument 2
 push argument 3
-call AI.maxValue 4
+push argument 4
+push constant 1
+add
+call AI.maxValue 5
 call Math.min 2
 pop local 0
 push local 3
@@ -337,7 +371,7 @@ goto WHILE_EXP0
 label WHILE_END0
 push local 0
 return
-function AI.finished 3
+function AI.finished 1
 push argument 0
 pop pointer 0
 push pointer 0
@@ -399,47 +433,15 @@ return
 label IF_END3
 label IF_END1
 label IF_FALSE0
-push constant 0
-pop local 1
-push constant 0
-pop local 2
-label WHILE_EXP0
-push local 1
+push argument 2
 push constant 9
-lt
-not
-if-goto WHILE_END0
-push local 1
-push argument 1
-add
-pop pointer 1
-push that 0
-push constant 95
 eq
-not
 if-goto IF_TRUE4
 goto IF_FALSE4
 label IF_TRUE4
-push local 2
-push constant 1
-add
-pop local 2
-label IF_FALSE4
-push local 1
-push constant 1
-add
-pop local 1
-goto WHILE_EXP0
-label WHILE_END0
-push local 2
-push constant 9
-eq
-if-goto IF_TRUE5
-goto IF_FALSE5
-label IF_TRUE5
 push constant 0
 return
-label IF_FALSE5
+label IF_FALSE4
 push constant 2
 return
 function AI.checkRows 1
